Tweaked user password hashing to be driver operated. Now additional hash methods can be added easily. User editor admin page is mostly done. ACL stuff missing.

--- a/application/views/account/email.phtml
+++ b/application/views/account/email.phtml
@@ -35,7 +35,7 @@
 
                             if (response && response.errors) {
                                 for (var k in response.errors) {
-                                    page.div.find('.id-error-' + k).html(response.errors[k]).css('display', 'block');
+                                    $('.id-error-' + k, page.div).html(response.errors[k]).css('display', 'block');
                                 }
                             }
                         }
