Cleaned up JS Dialog view renderer.

--- a/application/dialogs/account/create/afterLoad.phtml
+++ b/application/dialogs/account/create/afterLoad.phtml
@@ -1,4 +1,4 @@
-
+<script>
     var _validate_email = function(e) {
         var email = $("input[name='email']", elements.body).val();
 
@@ -93,3 +93,4 @@
     });
 
     _validate_email();
+</script>
