--- a/application/dialogs/account/login/afterLoad.phtml
+++ b/application/dialogs/account/login/afterLoad.phtml
@@ -1,24 +1,31 @@
-
+<script>
     var messageEl = $("div#message", elements.body);
     var originalMessage = messageEl.text();
+    var self = this;
 
     $("form", elements.dialog).on("submit", function(e) {
         e.preventDefault();
 
         Core.ajax({
-            "url": "/account/ajax/password_lost",
+            "url": "/account/ajax/login/verify",
             "data": {
-                "email": $("input[name='email']", elements.dialog).val()
+                "email":    $("input[name='email']", elements.dialog).val(),
+                "password": $("input[name='password']", elements.dialog).val(),
+                "remember": $("input[name='remember']", elements.dialog).attr('checked') ? 1 : 0
             },
             "success": function(response) {
                 if (response.status === 'good') {
-                    CoreDialog.done();
-                    alert("Please check your email. You have been sent a link to reset your password.");
+                    if (self.activeRemaining()) {
+                        self.close();
+                    } else {
+                        self.closeAll();
+                        location.href = response.bounce || location.href;
+                    }
                 } else {
                     if (response.message) {
                         var message = response.message;
                     } else {
-                        var message = "There was a problem requesting a new password, please make sure your email address is correct.";
+                        var message = "There was a problem logging you in.";
                     }
 
                     messageEl
@@ -39,8 +46,15 @@
 
     $("input[name='email']", elements.body).focus();
 
-    $("a[name='login']", elements.dialog).on("click", function(e) {
+    $("a[name='create']", elements.dialog).on("click", function(e) {
        e.preventDefault();
-       CoreDialog.done();
-       CoreDialog.showUrl("/account/ajax/dialog/login");
+        self.done();
+        self.showUrl("/account/ajax/dialog/create");
     });
+
+    $("a[name='lostpassword']", elements.dialog).on("click", function(e) {
+       e.preventDefault();
+        self.done();
+        self.showUrl("/account/ajax/dialog/lostpassword");
+    });
+</script>
