--- a/application/dialogs/account/lostpassword/afterLoad.phtml
+++ b/application/dialogs/account/lostpassword/afterLoad.phtml
@@ -1,31 +1,24 @@
-
+<script>
     var messageEl = $("div#message", elements.body);
     var originalMessage = messageEl.text();
-    var self = this;
 
     $("form", elements.dialog).on("submit", function(e) {
         e.preventDefault();
 
         Core.ajax({
-            "url": "/account/ajax/login/verify",
+            "url": "/account/ajax/password_lost",
             "data": {
-                "email":    $("input[name='email']", elements.dialog).val(),
-                "password": $("input[name='password']", elements.dialog).val(),
-                "remember": $("input[name='remember']", elements.dialog).attr('checked') ? 1 : 0
+                "email": $("input[name='email']", elements.dialog).val()
             },
             "success": function(response) {
                 if (response.status === 'good') {
-                    if (self.activeRemaining()) {
-                        self.close();
-                    } else {
-                        self.closeAll();
-                        location.href = response.bounce || location.href;
-                    }
+                    CoreDialog.done();
+                    alert("Please check your email. You have been sent a link to reset your password.");
                 } else {
                     if (response.message) {
                         var message = response.message;
                     } else {
-                        var message = "There was a problem logging you in.";
+                        var message = "There was a problem requesting a new password, please make sure your email address is correct.";
                     }
 
                     messageEl
@@ -46,14 +39,9 @@
 
     $("input[name='email']", elements.body).focus();
 
-    $("a[name='create']", elements.dialog).on("click", function(e) {
+    $("a[name='login']", elements.dialog).on("click", function(e) {
        e.preventDefault();
-        self.done();
-        self.showUrl("/account/ajax/dialog/create");
+       CoreDialog.done();
+       CoreDialog.showUrl("/account/ajax/dialog/login");
     });
-
-    $("a[name='lostpassword']", elements.dialog).on("click", function(e) {
-       e.preventDefault();
-        self.done();
-        self.showUrl("/account/ajax/dialog/lostpassword");
-    });
+</script>
