Fixed bug in CoreDialog that did not remove any event handlers to dialog elements (such as elements.form.on("submit") that were left over from a previous dialog's content).

--- a/application/dialogs/account/create/afterLoad.phtml
+++ b/application/dialogs/account/create/afterLoad.phtml
@@ -82,9 +82,7 @@
         });
     });
 
-    $("input[name='email']", elements.body)
-       .focus()
-       .blur(_validate_email);
+    $("input[name='email']", elements.body).blur(_validate_email);
 
     $("a[name='login']", elements.dialog).on("click", function(e) {
        e.preventDefault();
