--- a/application/dialogs/account/create/body.phtml
+++ b/application/dialogs/account/create/body.phtml
@@ -6,7 +6,7 @@
         <table width="100%">
             <tr>
                 <td width="150" align="right">
-                    <strong>Email</strong>
+                    <label name="email"><strong>Email</strong></label>
                     <div name="email" class="tiny error" style="display: none;"></div>
                 </td>
                 <td width="10">&nbsp;</td>
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td width="150" align="right">
-                    <strong>New Password</strong>
+                    <label name="password1"><strong>New Password</strong></label>
                     <div name="password1" class="tiny error" style="display: none;"></div>
                 </td>
                 <td width="10">&nbsp;</td>
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td width="150" align="right">
-                    <strong>Retype Password</strong>
+                    <label name="password2"><strong>Retype Password</strong></label>
                     <div name="password2" class="tiny error" style="display: none;"></div>
                 </td>
                 <td width="10">&nbsp;</td>
