--- a/application/dialogs/account/login/body.phtml
+++ b/application/dialogs/account/login/body.phtml
@@ -6,7 +6,7 @@
         <table width="100%">
             <tr>
                 <td width="90" align="right">
-                    <strong>Email</strong>
+                    <label name="email"><strong>Email</strong></label>
                 </td>
                 <td width="10">&nbsp;</td>
                 <td>
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <td width="90" align="right">
-                    <strong>Password</strong>
+                    <label name="password"><strong>Password</strong></label>
                 </td>
                 <td width="10">&nbsp;</td>
                 <td>
