--- a/application/dialogs/account/lostpassword/body.phtml
+++ b/application/dialogs/account/lostpassword/body.phtml
@@ -6,7 +6,7 @@
         <table width="100%">
             <tr>
                 <td width="90" align="right">
-                    <strong>Email</strong>
+                    <label name="email"><strong>Email</strong></label>
                 </td>
                 <td width="10">&nbsp;</td>
                 <td>
