--- a/www/public/css/CoreDialog.css
+++ b/www/public/css/CoreDialog.css
@@ -326,6 +326,7 @@
         }
         .CoreDialog .inner .loading .loading-outer {
             position: relative;
+            display: block;
             height: 100%;
             width: 100%;
         }
